--- a/src/MyApp.Shared/App.xaml
+++ b/src/MyApp.Shared/App.xaml
@@ -2,7 +2,6 @@
     x:Class="MyApp.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MyApp"
-    RequestedTheme="Light">
+    xmlns:local="using:MyApp">
 
 </Application>
