Update page with slider

--- a/src/MyApp.Shared/MainPage.xaml
+++ b/src/MyApp.Shared/MainPage.xaml
@@ -8,6 +8,9 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-		<TextBlock Text="Hello, world!" Margin="20" FontSize="30" />
+		<StackPanel Margin="50">
+			<Slider x:Name="slider" />
+			<TextBlock Text="{Binding Value, ElementName=slide}" FontSize="30"/>
+		</StackPanel>
     </Grid>
 </Page>
