--- a/src/MyApp.Shared/App.xaml
+++ b/src/MyApp.Shared/App.xaml
@@ -3,5 +3,9 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:MyApp">
+	
+	<Application.Resources>
+		<XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
+	</Application.Resources>
 
 </Application>
