--- a/src/MyApp.Skia.Wpf.Host/App.xaml
+++ b/src/MyApp.Skia.Wpf.Host/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="MyApp.WPF.Host.App"
+<Application x:Class="MyApp.WPF.Host.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MyApp.WPF.Host"
