--- a/src/MyApp.Skia.Wpf.Host/MainWindow.xaml
+++ b/src/MyApp.Skia.Wpf.Host/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MyApp.WPF.Host.MainWindow"
+<Window x:Class="MyApp.WPF.Host.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
