--- a/src/MyApp.Skia.Wpf/Wpf/App.xaml
+++ b/src/MyApp.Skia.Wpf/Wpf/App.xaml
@@ -1,9 +1,8 @@
 ﻿<Application x:Class="MyApp.WPF.App"
-			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-			 xmlns:local="clr-namespace:MyApp.WPF"
-			 StartupUri="Wpf/MainWindow.xaml">
-	<Application.Resources>
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="clr-namespace:MyApp.WPF">
+  <Application.Resources>
 
-	</Application.Resources>
+  </Application.Resources>
 </Application>
